invalidate hover on flags to avoid infinite jumps of marker

--- a/src/CustomMarker/CustomMarker.scss
+++ b/src/CustomMarker/CustomMarker.scss
@@ -96,6 +96,7 @@
       font-size: 22px;
       top: -8px;
       z-index: 1;
+      pointer-events: none;
     }
 
     img {
